--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>2048 game</title>
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
     </div>
   </div>
 </div>
-  <script src="js/index.js"></script>
+  <script src="index.js"></script>
 </body>
 <p class="made-by">
   <strong>Colorful Version of the classic 2048 game</strong><br>
